--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,13 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+
+    <!-- CDN script tags go below here -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
+    <!-- <script src="https://cdn.jsdelivr.net/npm/tone@13.8.25/build/Tone.min.js"></script> -->
+
+    <title>AI Daw by sibeliusy</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
