--- a/public/index.html
+++ b/public/index.html
@@ -27,8 +27,8 @@
 
     <!-- CDN script tags go below here -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@100;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
-    <!-- <script src="https://cdn.jsdelivr.net/npm/tone@13.8.25/build/Tone.min.js"></script> -->
 
     <title>AI Daw by sibeliusy</title>
   </head>
